# productivity-codex

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/platform/: browserAdapters.ts  defaultState.ts  index.ts  localStorageAdapter.ts  ports.ts  supabaseSync.ts  tauriAdapters.ts
src/shared/: date.ts  events.test.ts  events.ts  export.test.ts  export.ts  recurrence.test.ts  recurrence.ts  reminders.test.ts  reminders.ts  selectors.test.ts  selectors.ts  settings.test.ts  settings.ts  sounds.ts  tasks.test.ts  tasks.ts  timer.test.ts  timer.ts  types.ts  uiHelpers.test.ts  uiHelpers.ts
src/ui/: App.test.tsx  App.tsx  usePlanner.ts
supabase/migrations/: 202607020001_create_planner_states.sql
