[package]
name = "productivity-codex"
version = "0.1.0"
description = "A Windows-first productivity planner."
authors = ["Aquadratic"]
edition = "2021"

[lib]
name = "productivity_codex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
